force-app/main/default/objects/Lead/fields/Countconversion__c.field-meta.xml
<CustomField>
    <fullName>Countconversion__c</fullName>
    <formula>NumberofLocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Countconversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>