force-app/main/default/objects/Lead/fields/Desc__c.field-meta.xml
<CustomField>
    <fullName>Desc__c</fullName>
    <label>Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>