force-app/main/default/objects/Lead/fields/L_Deatail__c.field-meta.xml
<CustomField>
    <fullName>L_Deatail__c</fullName>
    <label>L-Deatail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>