force-app/main/default/objects/Lead/fields/Ldtail__c.field-meta.xml
<CustomField>
    <fullName>Ldtail__c</fullName>
    <label>Ldtail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>