force-app/main/default/objects/Lead/fields/LeadD_T__c.field-meta.xml
<CustomField>
    <fullName>LeadD_T__c</fullName>
    <label>LeadD&amp;T</label>
    <type>DateTime</type>
</CustomField>