force-app/main/default/objects/Lead/fields/LeadDetail__c.field-meta.xml
<CustomField>
    <fullName>LeadDetail__c</fullName>
    <label>LeadDetail</label>
    <type>TextArea</type>
</CustomField>