force-app/main/default/objects/Lead/fields/LeadNum__c.field-meta.xml
<CustomField>
    <fullName>LeadNum__c</fullName>
    <displayFormat>A-{00}</displayFormat>
    <label>LeadNum</label>
    <type>AutoNumber</type>
</CustomField>