force-app/main/default/objects/Lead/fields/LeadPhone__c.field-meta.xml
<CustomField>
    <fullName>LeadPhone__c</fullName>
    <label>LeadPhone</label>
    <type>Phone</type>
</CustomField>