force-app/main/default/objects/Lead/fields/Valid_Company__c.field-meta.xml
<CustomField>
    <fullName>Valid_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Company</label>
    <type>Checkbox</type>
</CustomField>