force-app/main/default/objects/Lead/listViews/Test_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Test_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Test_Queue</label>
    <queue>Test_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>